syntax= "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "./pkg/pb";

service OrderService {
    rpc AddtoOrders (AddOrderRequest) returns (AddOrderResponse){}
    rpc GetOrders (ShowOrdersRequest) returns (ShowOrdersResponse){}
    rpc GetOrderDetails (ViewOrderDetailResquest) returns (ShowOrderDetailResponse){}
}

message AddOrderRequest {
    string couponcode=1;
    uint32 addressid=2;
    uint32 paymentid=3;
    uint32 userid=4;
}

message AddOrderResponse {
    int32 status=1;
    string Response=2;
    string RazorpayKey=3;
     uint32   AmountToPay=4;
  int32    RazorpayAmount=5;
 string RazorpayOrderID=6;
          uint32   UserID=7;
}

message ShowOrdersRequest {
    uint32 userid=1;
}

message ShowOrders {
        uint32      ID=1;
     string HouseName=2;
     string Street=3;
     string City=4;
     string State=5;
     string Country=6;
     string Pincode=7;
     google.protobuf.Timestamp PlacedDate=8;
       string    Mode=9;
    uint32      GrandTotal=10;
}

message ShowOrdersResponse {
    int32 status=1;
    repeated ShowOrders orders=2;
}

message ViewOrderDetailResquest {
    uint32 orderid=1;
}

message OrderDetail {
    uint32 ID=1;
    string Image=2;
	string ModelName=3;
	uint32   Price=4;
	string BrandName=5;
	uint32   Quantity=6;
	uint32   Percentage=7;
    string Colour=8;
	string Size=9;
    string Status=10;
    google.protobuf.Timestamp DeliveredDate=11;
    google.protobuf.Timestamp CancelledDate=12;
}

message ShowOrderDetailResponse {
    int32 Status=1;
    repeated OrderDetail details=2;
}